<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, YuDongActivity!</string>
    <string name="app_name">羽动不同</string>
    <string name="main_title">羽动不同</string>
    <string name="main_cancel">取消</string>
    <string name="main_login">登录</string>
    <string name="main_login_msg">欢迎使用羽动</string>
    <string name="main_regist">注册</string>
    <string name="main_regist_msg">欢迎加入羽动</string>
    <string name="login_user_hint">请输入帐号：</string>
    <string name="login_passwd_hint">请输入密码 :</string>
    <string name="check_passwd_hint">请确认密码 :</string>
    <string name="login_forget_passwd">忘记密码?</string>
    <string name="regist_num">帐号：</string>
    <string name="regist_password">密码：</string>
    <string name="regist_check_password">确认密码：</string>
    <string name="title_activity_user_new">我的信息</string>
    <string name="name">姓名：</string>
    <string name="phone">号码：</string>
     <string name="check_pwd">密码错误，请重新输入</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_site">SiteActivity</string>

</resources>