<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/main_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/login_top_bg" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="23dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/main_title"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="#aaaaaa"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_selector"
                android:inputType="text"
                android:textColor="#aaaaaa"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/phone"
                android:textColor="#aaaaaa"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_selector"
                android:inputType="phone"
                android:textColor="#aaaaaa"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>